--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
-version: '3.8'
 services:
   webserver:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
      - "8899:8899"
     depends_on:
      - redis
-
   redis:
-    image: redis:4.0
+    image: redis:6.0
+    ports:
+     - 6379:6379
